--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,14 @@
   border-bottom: 1px solid #d8d8d8;
 }
 
+.Categories {
+  height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+}
+
 .Title {
   margin: 2rem;
   font-size: 1.8rem;
@@ -44,6 +52,83 @@
   border-radius: 0.3rem;
 }
 
+.Genre {
+  font-weight: bold;
+  font-size: 1rem;
+  color: #999;
+}
+
+.BookTitle {
+  font-family: 'Roboto Slab', serif;
+  font-weight: bold;
+  color: #121212;
+  font-size: 1.37rem;
+}
+
+.BookAuthor {
+  font-family: 'Roboto Slab', serif;
+  color: #0290ff;
+}
+
+.Remove {
+  background-color: transparent;
+  border: none;
+  font-family: 'Roboto Slab', serif;
+  font-size: 1rem;
+  color: #0290ff;
+  padding: 0;
+}
+
+.Remove:hover {
+  cursor: pointer;
+}
+
+.graphContainer {
+  display: flex;
+  align-items: center;
+}
+
+.percentageContainer {
+  width: 70px;
+  height: 70px;
+  border-radius: 3rem;
+  border: 5px solid #3487e7;
+  border-right: 5px solid #ddd;
+  transform: rotate(225deg);
+  margin: 0 2rem;
+}
+
+.percentage {
+  font-size: 2rem;
+}
+
+.AddNew {
+  margin: 3rem;
+  color: #888;
+  text-transform: uppercase;
+}
+
+.Add {
+  background-color: #3487e7;
+  color: white;
+  font-family: 'Roboto Slab', serif;
+  font-weight: bold;
+  height: 2.2rem;
+  border: none;
+  border-radius: 4px;
+  width: 5%;
+  float: right;
+}
+
+.Btn:hover {
+  cursor: pointer;
+}
+
+::placeholder {
+  font-family: 'Montserrat', sans-serif;
+  color: #c4c4c4;
+}
+
 .ProgressBtn {
   background-color: #3487e7;
   color: white;
@@ -52,4 +137,38 @@
   border: none;
   border-radius: 4px;
   padding: 0 2rem;
+}
+
+.AddForm {
+  width: 95vw;
+  align-items: center;
+  padding: 3rem;
+}
+
+#title {
+  width: 30%;
+}
+
+#author {
+  width: 30%;
+}
+
+
+form input {
+  font-size: 1rem;
+  color: #c4c4c4;
+  border: 1px solid #c4c4c4;
+  border-radius: 4px;
+  margin-right: 0.3rem;
+  height: 2rem;
+  width: auto;
+}
+
+select {
+  border: 1px solid #c4c4c4;
+  border-radius: 4px;
+  font-size: 1rem;
+  color: #c4c4c4;
+  height: 2.2rem;
+  width: 30%;
 }
