--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,11 @@
   top: 5rem;
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   border-bottom: 1px solid #d8d8d8;
+  width: 100vw;
+  background-color: white;
 }
 
 .Categories {
@@ -21,9 +25,12 @@
   color: #0290ff;
 }
 
+.header {
+  width: 100vw;
+}
+
 .NavBar {
   display: flex;
-  width: 100vw;
   background-color: white;
 }
 
@@ -39,6 +46,15 @@
 
 .NavBar li {
   padding-right: 2rem;
+}
+
+.Profile {
+  width: 2rem;
+  height: 2rem;
+  margin-right: 3rem;
+  border: 1px solid lightgray;
+  border-radius: 60%;
+  padding: 0.6rem;
 }
 
 .BookContainer {
@@ -103,7 +119,7 @@
 }
 
 .AddNew {
-  margin: 3rem;
+  margin-left: 3rem;
   color: #888;
   text-transform: uppercase;
 }
@@ -140,7 +156,7 @@
 }
 
 .AddForm {
-  width: 95vw;
+  width: 90%;
   align-items: center;
   padding: 3rem;
 }
